--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/murrayju/clickup-oasis-bridge#readme",
   "devDependencies": {
+    "@playwright/test": "^1.37.1",
     "@types/express": "^4.17.17",
     "prettier": "^3.0.2",
     "tsx": "^3.12.7",
@@ -28,7 +29,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ngrok": "^5.0.0-beta.2",
-    "node-fetch": "^3.3.2"
+    "express-promise-router": "^4.1.1",
+    "ngrok": "^5.0.0-beta.2"
   }
 }
