--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-promise-router": "^4.1.1",
-    "ngrok": "^5.0.0-beta.2"
+    "ngrok": "^5.0.0-beta.2",
+    "pino": "^8.15.3",
+    "pino-pretty": "^10.2.0"
   }
 }
